--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,6 @@ celerybeat.pid
 # Environments
 .env
 .venv
-env/
 venv/
 ENV/
 env.bak/
@@ -149,3 +148,5 @@ cython_debug/
 out
 gen
 images/
+algorithms/logs/
+logs/
